src/components/navbar/index.module.css
#topNavbar {
    font-size : 20px ;
    background-color : white ;
    box-shadow : 0px 3px 3px #aaa ;

    /* Override base navbar padding so container controls size.
       Only affects xs- screens. */
    padding-left: 0;
    padding-right: 0;
}

#topNavbar :global(.container) {
    padding: 0;
}

#topNavbar .topNavbarBrand {
    font-size : 20px ;
    font-weight : 400 ;
    color : black ;
    padding-top : 8px ;
    padding-bottom : 8px ;
    padding-left: 15px;
    padding-right: 15px;
    border-radius : 5px ;
    margin-right : 20px ;
}


#topNavbar a.topNavLink {
    color : black ;
    border-radius : 5px ;
    padding-top : 12px ;
    padding-bottom : 10px ;
    padding-left: 15px;
    padding-right: 15px;
    margin-left: 10px;
}

#topNavbar a.topNavLink:hover,
#topNavbar a.topNavbarBrand:hover {
    color : white ;
    background-color : #222 ;

}

#topNavbar .topNavbarToggle {
    border: 0;
    margin-right: 15px;
}

#topNavbar .topNavbarToggle:hover {
    background-color: black;
}

#topNavbar .topNavbarToggle:focus {
    outline: none;
}

#topNavbar .topNavbarToggle :global(.navbar-toggler-icon) {
    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(0,0,0)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

#topNavbar .topNavbarToggle:hover :global(.navbar-toggler-icon) {
    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgb(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
}

